@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: stack.test,v 1.15 2002/07/29 00:25:49 msofer Exp $
+# RCS: @(#) $Id: stack.test,v 1.15.2.1 2004/05/03 18:01:36 kennykb Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -55,6 +55,36 @@ test stack-2.1 {maxNestingDepth reached on infinite recursion} {minStack2400} {
     set msg
 } {too many nested evaluations (infinite loop?)}
 
+# Make sure that there is enough stack to run regexp even if we're
+# close to the recursion limit. [Bug 947070]
+
+test stack-3.1 {enough room for regexp near recursion limit} \
+    -constraints { win } \
+    -setup {
+	set ::limit [interp recursionlimit {} 10000]
+	set ::depth 0
+	proc a { max } {
+	    if { [info level] < $max } {
+		set ::depth [info level]
+		a $max
+	    } else {
+		regexp {^ ?} x
+	    }
+	}
+	list [catch { a 10001 }]
+	incr depth -3
+	set depth2 $depth
+    } -body {
+	list [catch { a $::depth } result] \
+	    $result [expr { $::depth2 - $::depth }]
+    } -cleanup {
+	interp recursionlimit {} $::limit
+    } -result {0 1 1}
+
 # cleanup
 ::tcltest::cleanupTests
 return
+
+# Local Variables:
+# mode: tcl
+# End:
