@@ -1,3 +1,9 @@
+2004-05-03  Kevin Kenny  <kennykb@acm.org>
+
+	* win/tclWin32Dll.c (TclpCheckStackSpace):
+	* tests/stack.test (stack-3.1): Fix for undetected stack
+	overflow in TclReExec on Windows. [Bug 947070]
+	
 2004-05-03  Don Porter  <dgp@users.sourceforge.net>
 
         * library/init.tcl:     Corrected unique prefix matching of
